--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "twig/twig": "^3.0",
-        "symfony/routing": "^6.4"
+        "symfony/routing": "^6.4",
+        "phpmailer/phpmailer": "^6.9"
     }
 }
